@@ -4,12 +4,15 @@ import cz.cvut.fit.tjv.hospital_appointments.api.dto.AppointmentDto;
 import cz.cvut.fit.tjv.hospital_appointments.domain.Appointment;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 public class AppointmentConverter {
 
     public static Appointment fromDto(AppointmentDto dto) {
-        return new Appointment(dto.getId(), dto.getFromTime(), dto.getToTime());
+        return Appointment.builderWithoutRelations()
+                .id(dto.getId())
+                .fromTime(dto.getFromTime())
+                .toTime(dto.getToTime())
+                .build();
     }
 
     public static AppointmentDto toDto(Appointment appointment) {
@@ -23,6 +26,6 @@ public class AppointmentConverter {
     public static Collection<AppointmentDto> toDtoMany(Collection<Appointment> appointments) {
         return appointments.stream()
                 .map(AppointmentConverter::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
