@@ -4,12 +4,15 @@ import cz.cvut.fit.tjv.hospital_appointments.api.dto.DoctorDto;
 import cz.cvut.fit.tjv.hospital_appointments.domain.Doctor;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 public class DoctorConverter {
 
     public static Doctor fromDto(DoctorDto dto) {
-        return new Doctor(dto.getId(), dto.getName(), dto.getPosition());
+        return Doctor.builderWithoutRelations()
+                .id(dto.getId())
+                .name(dto.getName())
+                .position(dto.getPosition())
+                .build();
     }
 
     public static DoctorDto toDto(Doctor doctor) {
@@ -23,6 +26,6 @@ public class DoctorConverter {
     public static Collection<DoctorDto> toDtoMany(Collection<Doctor> doctors) {
         return doctors.stream()
                 .map(DoctorConverter::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
